# velodyne_detect_person

./: CMakeLists.txt  package.xml
include/: AriaMapInformation.h  PersonPosition.h
launch/: background_extraction.launch  dynamic_background.launch  static_background.launch
msg/: personVector.msg  pointCloudVector.msg
src/: AriaMapInformation.cpp  PersonPosition.cpp  extract_clusters.cpp  find_person.cpp  robot_data.cpp  set_background.cpp  set_static_background.cpp  tf_broadcaster.cpp  tracking.cpp
