<?xml version="1.0"?>
<package>
  <name>velodyne_detect_person</name>
  <version>0.0.0</version>
  <description>
  	velodyne_detect_person package uses Velodyne pointclouds to detect moving people candidates.
  	This is done using a background detector and comparing background pointcloud with new pointclouds.
  </description>

  <maintainer email="alvarovillenamg@gmail.com">Álvaro Villena</maintainer>

  <license>TODO</license>

  <author email="alvarovillenamg@gmail.com">Álvaro Villena</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>

  </export>
</package>
